feat: adjust header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Matteo Le Pera">
     <meta name="description" content="pagina discord">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./img/ds-favicon.svg" type="image/x-icon">
     <title>Discord</title>
@@ -14,18 +20,18 @@
 <body>
 
     <!-- Header -->
-    <header class="bg-sky ht-60 flex">
-        <div class="header-bar flex bg-yellow ht-30">
-            <img id="logo" src="." alt="logo">
-            <nav class="nav-header dsp-inbl">
-                <a href=".">link</a>
-                <a href=".">link</a>
-                <a href=".">link</a>
-                <a href=".">link</a>
-                <a href=".">link</a>
+    <header class="flex hd-bg">
+            <nav class="container flex nav-bar">
+                <div class="header-logo">logo</div>
+                <ul class="flex gap">
+                    <li><a href=".">Scarica</a></li>
+                    <li><a href=".">Perch&eacute; Discord</a></li>
+                    <li><a href=".">Nitro</a></li>
+                    <li><a href=".">Sicurezza</a></li>
+                    <li><a href=".">Assistenza</a></li>
+                </ul>
+                <div class="header-login"> <a href=".">Accedi</a></div>
             </nav>
-            <img class="logo" src="." alt="logo">
-        </div>
     </header>
     <!-- End-Header -->
 
@@ -73,20 +79,20 @@
         <div class="main-footer flex">
             <div class="box-foot bg-peach ht-350">
             </div>
-        
-        <div class="box-nav ht-350 flex">
-            <div class="box-nav-li bg-lt-green"></div>
-            <div class="box-nav-li bg-lt-green"></div>
-            <div class="box-nav-li bg-lt-green"></div>
-            <div class="box-nav-li bg-lt-green"></div>
+
+            <div class="box-nav ht-350 flex">
+                <div class="box-nav-li bg-lt-green"></div>
+                <div class="box-nav-li bg-lt-green"></div>
+                <div class="box-nav-li bg-lt-green"></div>
+                <div class="box-nav-li bg-lt-green"></div>
+            </div>
         </div>
-    </div>
         <div class="foot-cont flex ht-60">
             <div class="footer-bar flex bg-acqua">
                 <img class="logo" src="." alt="logo">
                 <button>bottone</button>
             </div>
-            
+
         </div>
     </footer>
     <!-- End-Footer -->
