feat: header end

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     <!-- Header -->
     <header class="flex hd-bg">
             <nav class="container flex nav-bar">
-                <div class="header-logo">logo</div>
+                <div class="header-logo"><img src="./img/logo.svg"></div>
                 <ul class="flex gap">
-                    <li><a href=".">Scarica</a></li>
-                    <li><a href=".">Perch&eacute; Discord</a></li>
-                    <li><a href=".">Nitro</a></li>
-                    <li><a href=".">Sicurezza</a></li>
-                    <li><a href=".">Assistenza</a></li>
+                    <li><a class="text-white07" href=".">Scarica</a></li>
+                    <li><a class="text-white07" href=".">Perch&eacute; Discord</a></li>
+                    <li><a class="text-white07" href=".">Nitro</a></li>
+                    <li><a class="text-white07" href=".">Sicurezza</a></li>
+                    <li><a class="text-white07" href=".">Assistenza</a></li>
                 </ul>
-                <div class="header-login"> <a href=".">Accedi</a></div>
+                <div class="header-login small-btn bg-white"> <a class="text-black" href=".">Accedi</a></div>
             </nav>
     </header>
     <!-- End-Header -->
