--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./img/ds-favicon.svg" type="image/x-icon">
     <title>Discord</title>
@@ -21,28 +23,34 @@
 
     <!-- Header -->
     <header class="flex hd-bg">
-            <nav class="container flex nav-bar">
-                <div class="header-logo"><img src="./img/logo.svg"></div>
-                <ul class="flex gap">
-                    <li><a class="text-white07" href=".">Scarica</a></li>
-                    <li><a class="text-white07" href=".">Perch&eacute; Discord</a></li>
-                    <li><a class="text-white07" href=".">Nitro</a></li>
-                    <li><a class="text-white07" href=".">Sicurezza</a></li>
-                    <li><a class="text-white07" href=".">Assistenza</a></li>
-                </ul>
-                <div class="header-login small-btn bg-white"> <a class="text-black" href=".">Accedi</a></div>
-            </nav>
+        <nav class="container flex nav-bar roboto">
+            <div class="header-logo"><img src="./img/logo.svg"></div>
+            <ul class="flex gap">
+                <li><a class="text-white07" href=".">Scarica</a></li>
+                <li><a class="text-white07" href=".">Perch&eacute; Discord</a></li>
+                <li><a class="text-white07" href=".">Nitro</a></li>
+                <li><a class="text-white07" href=".">Sicurezza</a></li>
+                <li><a class="text-white07" href=".">Assistenza</a></li>
+            </ul>
+            <div class="header-login small-btn bg-white"> <a class="text-black" href=".">Accedi</a></div>
+        </nav>
     </header>
     <!-- End-Header -->
-
-    <!-- Hero -->
-    <div class="hero flex bg-blue ht-350">
-        <div class="hero-content flex bg-pink"></div>
-    </div>
-    <!-- End-Hero -->
-
     <!-- Main -->
     <main class="main-container">
+
+        <!-- Hero -->
+    <div class="hero flex bg-blue">
+        <div class="hero-content flex roboto">
+            <h2 class="title-hero text-white">Il tuo posto per parlare</h2>
+            <p class=" p-hero text-white07">Che tu faccia parte di un club scolastico, un gruppo di gamer, comunit&agrave; artistica mondiale,
+                o semplimente di un piccolo gruppo di amici che vuole passare il tempo assieme,
+                Discord rende pi&ugrave; facile chiacchierare ogni giorno e ritrovarsi pi&ugrave; spesso.</p>
+            <button class="large-btn mb-20 mb-rt15 bg-white text-black"><i class="fa-solid fa-down-long"></i>Scarica per Max</button>
+            <a class="large-btn mb-20 bg-black text-white" href=".">Apri Dirscord nel tuo browser</a>
+        </div>
+    </div>
+    <!-- End-Hero -->
 
         <!-- Up-Box -->
         <div class="container flex ht-450 bg-white">
