--- a/index.html
+++ b/index.html
@@ -40,67 +40,79 @@
     <main class="main-container">
 
         <!-- Hero -->
-    <div class="hero flex bg-blue">
-        <div class="hero-content flex roboto">
-            <h2 class="title-hero text-white">Il tuo posto per parlare</h2>
-            <p class=" p-hero text-white07">Che tu faccia parte di un club scolastico, un gruppo di gamer, comunit&agrave; artistica mondiale,
-                o semplimente di un piccolo gruppo di amici che vuole passare il tempo assieme,
-                Discord rende pi&ugrave; facile chiacchierare ogni giorno e ritrovarsi pi&ugrave; spesso.</p>
-            <button class="large-btn mb-20 mb-rt15 bg-white text-black"><i class="fa-solid fa-down-long"></i>Scarica per Max</button>
-            <a class="large-btn mb-20 bg-black text-white" href=".">Apri Dirscord nel tuo browser</a>
+        <div class="hero flex">
+            <div class="hero-content flex roboto">
+                <h2 class="title-hero text-white">Il tuo posto per parlare</h2>
+                <p class=" p-hero text-white07">Che tu faccia parte di un club scolastico, un gruppo di gamer,
+                    comunit&agrave; artistica mondiale,
+                    o semplimente di un piccolo gruppo di amici che vuole passare il tempo assieme,
+                    Discord rende pi&ugrave; facile chiacchierare ogni giorno e ritrovarsi pi&ugrave; spesso.</p>
+                <button class="large-btn mb-20 m-rt15 bg-white text-black"><i class="fa-solid fa-down-long"></i>Scarica
+                    per Max</button>
+                <a class="large-btn mb-20 bg-black text-white" href=".">Apri Dirscord nel tuo browser</a>
+            </div>
         </div>
-    </div>
-    <!-- End-Hero -->
+        <!-- End-Hero -->
 
         <!-- Up-Box -->
-        <div class="container flex ht-450 bg-white">
-            <div class="main-box flex ht-450">
-                <div class="box-content ht-350 bg-lt-blue"></div>
-                <div class="box-content-rx ht-350 bg-salmon"></div>
+        <div class="bg-white">
+            <div class="container flex">
+
+                <div class="box-content flex">
+                </div>
+                <div class="box-content-rx">
+                    <h2 class="title-content roboto mt-40">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                    <p class="p-content roboto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia qui rerum, eveniet facilis ipsam, necessitatibus, nisi accusantium ad
+                        illum quasi neque ut corporis quia quaerat animi alias nam doloribus soluta.</p>
+                    </div>
+
             </div>
         </div>
         <!-- End-Up-Box -->
 
-        <div class="container flex ht-450 bg-grey">
-            <div class="main-box flex-reverse ht-450">
+        <div class=" flex ht-450 bg-grey">
+            <div class="container flex-reverse ht-450">
                 <div class="box-content ht-350 bg-lt-blue"></div>
                 <div class="box-content-rx ht-350 bg-salmon"></div>
             </div>
         </div>
 
-        <div class="container flex ht-450 bg-white">
-            <div class="main-box flex ht-450">
+        <div class=" flex ht-450 bg-white">
+            <div class="container flex ht-450">
                 <div class="box-content ht-350 bg-lt-blue"></div>
                 <div class="box-content-rx ht-350 bg-salmon"></div>
             </div>
         </div>
 
-        <div class="container flex ht-700 bg-grey">
-            <div class="end-box bg-green"></div>
-
+        <div class="flex ht-700 bg-grey">
+            <div class="container flex ht-700">
+                <div class="end-box bg-green"></div>
+            </div>
         </div>
     </main>
     <!-- End-Main -->
 
     <!-- Footer -->
-    <footer class="container bg-black ht-500">
-        <div class="main-footer flex">
-            <div class="box-foot bg-peach ht-350">
-            </div>
+    <footer class="bg-black ht-500">
+        <div class="container flex">
+            <div class="main-footer flex">
+                <div class="box-foot bg-peach ht-350">
+                </div>
 
-            <div class="box-nav ht-350 flex">
-                <div class="box-nav-li bg-lt-green"></div>
-                <div class="box-nav-li bg-lt-green"></div>
-                <div class="box-nav-li bg-lt-green"></div>
-                <div class="box-nav-li bg-lt-green"></div>
+                <div class="box-nav ht-350 flex">
+                    <div class="box-nav-li bg-lt-green"></div>
+                    <div class="box-nav-li bg-lt-green"></div>
+                    <div class="box-nav-li bg-lt-green"></div>
+                    <div class="box-nav-li bg-lt-green"></div>
+                </div>
             </div>
-        </div>
-        <div class="foot-cont flex ht-60">
-            <div class="footer-bar flex bg-acqua">
-                <img class="logo" src="." alt="logo">
-                <button>bottone</button>
-            </div>
+            <div class="foot-cont flex ht-60">
+                <div class="footer-bar flex bg-acqua">
+                    <img class="logo" src="." alt="logo">
+                    <button>bottone</button>
+                </div>
 
+            </div>
         </div>
     </footer>
     <!-- End-Footer -->
