--- a/index.html
+++ b/index.html
@@ -36,52 +36,84 @@
         </nav>
     </header>
     <!-- End-Header -->
-    <!-- Main -->
-    <main class="main-container">
 
-        <!-- Hero -->
-        <div class="hero flex">
-            <div class="hero-content flex roboto">
-                <h2 class="title-hero text-white">Il tuo posto per parlare</h2>
-                <p class=" p-hero text-white07">Che tu faccia parte di un club scolastico, un gruppo di gamer,
-                    comunit&agrave; artistica mondiale,
-                    o semplimente di un piccolo gruppo di amici che vuole passare il tempo assieme,
-                    Discord rende pi&ugrave; facile chiacchierare ogni giorno e ritrovarsi pi&ugrave; spesso.</p>
-                <button class="large-btn mb-20 m-rt15 bg-white text-black"><i class="fa-solid fa-down-long"></i>Scarica
-                    per Max</button>
-                <a class="large-btn mb-20 bg-black text-white" href=".">Apri Dirscord nel tuo browser</a>
-            </div>
+    <!-- Hero -->
+    <div class="hero flex">
+        <div class="hero-content flex roboto">
+            <h2 class="title-hero text-white">Il tuo posto per parlare</h2>
+            <p class=" p-hero text-white07">Che tu faccia parte di un club scolastico, un gruppo di gamer,
+                comunit&agrave; artistica mondiale,
+                o semplimente di un piccolo gruppo di amici che vuole passare il tempo assieme,
+                Discord rende pi&ugrave; facile chiacchierare ogni giorno e ritrovarsi pi&ugrave; spesso.</p>
+            <button class="large-btn mb-20 m-rt15 bg-white text-black"><i class="fa-solid fa-down-long"></i>Scarica
+                per Max</button>
+            <a class="large-btn mb-20 bg-black text-white" href=".">Apri Dirscord nel tuo browser</a>
         </div>
-        <!-- End-Hero -->
+    </div>
+    <!-- End-Hero -->
 
-        <!-- Up-Box -->
-        <div class="bg-white">
+    <main>
+
+        <!-- Invite -->
+        <div class="main-container bg-white">
             <div class="container flex">
 
                 <div class="box-content flex">
+                    <img class="max-width" src="./img/item1.svg" alt="">
                 </div>
                 <div class="box-content-rx">
-                    <h2 class="title-content roboto mt-40">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
-                    <p class="p-content roboto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia qui rerum, eveniet facilis ipsam, necessitatibus, nisi accusantium ad
-                        illum quasi neque ut corporis quia quaerat animi alias nam doloribus soluta.</p>
-                    </div>
+                    <h2 class="title-content roboto mt-40">Un luogo a invito con tutto lo spazio necessario per parlare
+                    </h2>
+                    <p class="p-content roboto">I server Discord sono organizzati in canali
+                        tematici in cuoi puoi collaborare, condividere o semplicemnte parlare
+                        della tua giornata senza intasare una chat di gruppo.
+                    </p>
+                </div>
 
             </div>
         </div>
-        <!-- End-Up-Box -->
+        <!-- End-Invite -->
 
-        <div class=" flex ht-450 bg-grey">
-            <div class="container flex-reverse ht-450">
-                <div class="box-content ht-350 bg-lt-blue"></div>
-                <div class="box-content-rx ht-350 bg-salmon"></div>
+
+
+        <div class="main-container bg-grey">
+            <div class="container flex-reverse">
+
+                <div class="box-content flex">
+                    <img class="max-width" src="./img/item2.svg" alt="">
+                </div>
+                <div class="box-content-rx flex">
+                    <h2 class="title-content roboto mt-40">Dove trovarsi &egrave; facile</h2>
+                    <p class="p-content roboto">Mettiti comodo in un canale vocale quando hai tempo.
+                        Gli amici nel tuo server possono vedere che sei l&igrave; e unirsi istantaneamente senza dover chiamare.
+                    </p>
+                </div>
+
             </div>
         </div>
 
-        <div class=" flex ht-450 bg-white">
-            <div class="container flex ht-450">
-                <div class="box-content ht-350 bg-lt-blue"></div>
-                <div class="box-content-rx ht-350 bg-salmon"></div>
+
+        <!-- Fandom -->
+         <div class="main-container bg-white">
+            <div class="container flex">
+
+                <div class="box-content flex">
+                    <img class="max-width" src="./img/item3.svg" alt="">
+                </div>
+                <div class="box-content-rx">
+                    <h2 class="title-content roboto mt-40">Un luogo a invito con tutto lo spazio necessario per parlare
+                    </h2>
+                    <p class="p-content roboto">I server Discord sono organizzati in canali
+                        tematici in cuoi puoi collaborare, condividere o semplicemnte parlare
+                        della tua giornata senza intasare una chat di gruppo.
+                    </p>
+                </div>
+
             </div>
+        </div>
+        <!-- End-Fandom -->
+
+        </div>
         </div>
 
         <div class="flex ht-700 bg-grey">
