feat: main section end, wip on the last

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Header -->
     <header class="flex hd-bg">
         <nav class="container flex nav-bar roboto">
-            <div class="header-logo"><img src="./img/logo.svg"></div>
+            <div class="header-logo"><img src="./img/logo.svg" alt="logo header discord"></div>
             <ul class="flex gap">
                 <li><a class="text-white07" href=".">Scarica</a></li>
                 <li><a class="text-white07" href=".">Perch&eacute; Discord</a></li>
@@ -45,8 +45,8 @@
                 comunit&agrave; artistica mondiale,
                 o semplimente di un piccolo gruppo di amici che vuole passare il tempo assieme,
                 Discord rende pi&ugrave; facile chiacchierare ogni giorno e ritrovarsi pi&ugrave; spesso.</p>
-            <button class="large-btn mb-20 m-rt15 bg-white text-black"><i class="fa-solid fa-down-long"></i>Scarica
-                per Max</button>
+            <a class="large-btn mb-20 m-rt15 bg-white text-black"><i class="fa-solid fa-down-long"></i>Scarica
+                per Mac</a>
             <a class="large-btn mb-20 bg-black text-white" href=".">Apri Dirscord nel tuo browser</a>
         </div>
     </div>
@@ -61,8 +61,8 @@
                 <div class="box-content flex">
                     <img class="max-width" src="./img/item1.svg" alt="">
                 </div>
-                <div class="box-content-rx">
-                    <h2 class="title-content roboto mt-40">Un luogo a invito con tutto lo spazio necessario per parlare
+                <div class="box-content-rx flex">
+                    <h2 class="title-content roboto mb-20">Un luogo a invito con tutto lo spazio necessario per parlare
                     </h2>
                     <p class="p-content roboto">I server Discord sono organizzati in canali
                         tematici in cuoi puoi collaborare, condividere o semplicemnte parlare
@@ -75,7 +75,7 @@
         <!-- End-Invite -->
 
 
-
+        <!-- Meet -->
         <div class="main-container bg-grey">
             <div class="container flex-reverse">
 
@@ -83,29 +83,31 @@
                     <img class="max-width" src="./img/item2.svg" alt="">
                 </div>
                 <div class="box-content-rx flex">
-                    <h2 class="title-content roboto mt-40">Dove trovarsi &egrave; facile</h2>
+                    <h2 class="title-content roboto mb-20">Dove trovarsi &egrave; facile</h2>
                     <p class="p-content roboto">Mettiti comodo in un canale vocale quando hai tempo.
-                        Gli amici nel tuo server possono vedere che sei l&igrave; e unirsi istantaneamente senza dover chiamare.
+                        Gli amici nel tuo server possono vedere che sei l&igrave; e unirsi istantaneamente senza dover
+                        chiamare.
                     </p>
                 </div>
 
             </div>
         </div>
+        <!-- End-Meet -->
 
 
         <!-- Fandom -->
-         <div class="main-container bg-white">
+        <div class="main-container bg-white">
             <div class="container flex">
 
                 <div class="box-content flex">
                     <img class="max-width" src="./img/item3.svg" alt="">
                 </div>
-                <div class="box-content-rx">
-                    <h2 class="title-content roboto mt-40">Un luogo a invito con tutto lo spazio necessario per parlare
+                <div class="box-content-rx flex">
+                    <h2 class="title-content roboto mb-20">Da pochi a un fandom
                     </h2>
-                    <p class="p-content roboto">I server Discord sono organizzati in canali
-                        tematici in cuoi puoi collaborare, condividere o semplicemnte parlare
-                        della tua giornata senza intasare una chat di gruppo.
+                    <p class="p-content roboto">Dai inizio a una community di qualasiasi dimensione
+                        con strumenti di moderazione e accesso ai membi personalizzabile.
+                        Concedi ai membri poteri specialim crea canali privati, e molto altro.
                     </p>
                 </div>
 
@@ -113,13 +115,30 @@
         </div>
         <!-- End-Fandom -->
 
-        </div>
+
+
+        <div class="main-container bg-grey">
+
+            <div class="box-end flex">
+                <h2 class="title-content roboto mt-40 mb-20">Tecnologia affidabile per tenersi in contatto
+                </h2>
+                <p class="p-content roboto">Video e audio a bassa latenza ti faranno sentire come se foste tutti nella
+                    stessa stanza.
+                    Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con
+                    la condivisione schermo.
+
+                </p>
+
+
+                <img src="./img/item4-big.svg" alt="">
+                <div class="end-cta">
+                    <h3 class="title-content-end roboto ">Pronto a iniziare la tua avventura?</h3>
+                    <a class="large-btn bg-white text-black roboto"><i
+                            class="fa-solid fa-down-long"></i>Scarica per Mac</a>
+                </div>
+            </div>
         </div>
 
-        <div class="flex ht-700 bg-grey">
-            <div class="container flex ht-700">
-                <div class="end-box bg-green"></div>
-            </div>
         </div>
     </main>
     <!-- End-Main -->
